@@ -4,70 +4,30 @@ liblqr-1.so.0 liblqr-1-0 #MINVER#
  lqr_carver_bias_add_area@Base 0.1.0
  lqr_carver_bias_add_rgb@Base 0.1.0
  lqr_carver_bias_add_rgb_area@Base 0.1.0
- lqr_carver_build_emap@Base 0.1.0
- lqr_carver_build_maps@Base 0.1.0
- lqr_carver_build_mmap@Base 0.1.0
- lqr_carver_build_vpath@Base 0.1.0
- lqr_carver_build_vsmap@Base 0.1.0
- lqr_carver_carve@Base 0.1.0
- lqr_carver_compute_e@Base 0.1.0
  lqr_carver_destroy@Base 0.1.0
- lqr_carver_finish_vsmap@Base 0.1.0
- lqr_carver_flatten_attached@Base 0.1.1
  lqr_carver_flatten@Base 0.1.0
  lqr_carver_get_bpp@Base 0.1.0
  lqr_carver_get_height@Base 0.1.0
  lqr_carver_get_width@Base 0.1.0
  lqr_carver_get_channels@Base 0.1.1
- lqr_carver_inflate_attached@Base 0.1.1
- lqr_carver_inflate@Base 0.1.0
  lqr_carver_init@Base 0.1.0
- lqr_carver_list_append@Base 0.1.0
  lqr_carver_list_current@Base 0.1.0
- lqr_carver_list_destroy@Base 0.1.0
  lqr_carver_list_foreach@Base 0.1.0
  lqr_carver_list_next@Base 0.1.0
  lqr_carver_list_start@Base 0.1.0
  lqr_carver_new@Base 0.1.0
  lqr_carver_new_16@Base 0.1.1
- lqr_carver_new_common@Base 0.1.1
- lqr_carver_read@Base 0.1.0
  lqr_carver_resize@Base 0.1.0
- lqr_carver_resize_height@Base 0.1.0
- lqr_carver_resize_width@Base 0.1.0
  lqr_carver_scan@Base 0.1.0
  lqr_carver_scan_16@Base 0.1.1
  lqr_carver_scan_by_row@Base 0.1.0
  lqr_carver_scan_line@Base 0.1.0
  lqr_carver_scan_line_16@Base 0.1.1
  lqr_carver_scan_reset@Base 0.1.0
- lqr_carver_scan_reset_all@Base 0.1.1
- lqr_carver_scan_reset_attached@Base 0.1.1
  lqr_carver_set_dump_vmaps@Base 0.1.0
  lqr_carver_set_gradient_function@Base 0.1.0
  lqr_carver_set_progress@Base 0.1.0
  lqr_carver_set_resize_order@Base 0.1.0
- lqr_carver_set_width@Base 0.1.0
- lqr_carver_set_width_attached@Base 0.1.0
- lqr_carver_transpose_attached@Base 0.1.0
- lqr_carver_transpose@Base 0.1.0
- lqr_carver_update_emap@Base 0.1.0
- lqr_carver_update_mmap@Base 0.1.0
- lqr_carver_update_vsmap@Base 0.1.0
- lqr_cursor_create@Base 0.1.0
- lqr_cursor_destroy@Base 0.1.0
- lqr_cursor_left@Base 0.1.0
- lqr_cursor_next@Base 0.1.0
- lqr_cursor_prev@Base 0.1.0
- lqr_cursor_reset@Base 0.1.0
- lqr_grad_norm@Base 0.1.0
- lqr_grad_norm_bias@Base 0.1.0
- lqr_grad_sumabs@Base 0.1.0
- lqr_grad_xabs@Base 0.1.0
- lqr_grad_yabs@Base 0.1.0
- lqr_grad_zero@Base 0.1.0
- lqr_progress_end@Base 0.1.0
- lqr_progress_init@Base 0.1.0
  lqr_progress_new@Base 0.1.0
  lqr_progress_set_end@Base 0.1.0
  lqr_progress_set_end_height_message@Base 0.1.0
@@ -77,7 +37,6 @@ liblqr-1.so.0 liblqr-1-0 #MINVER#
  lqr_progress_set_init_width_message@Base 0.1.0
  lqr_progress_set_update@Base 0.1.0
  lqr_progress_set_update_step@Base 0.1.0
- lqr_progress_update@Base 0.1.0
  lqr_vmap_destroy@Base 0.1.0
  lqr_vmap_dump@Base 0.1.0
  lqr_vmap_get_data@Base 0.1.0
@@ -86,19 +45,14 @@ liblqr-1.so.0 liblqr-1-0 #MINVER#
  lqr_vmap_get_orientation@Base 0.1.0
  lqr_vmap_get_width@Base 0.1.0
  lqr_vmap_internal_dump@Base 0.1.0
- lqr_vmap_list_append@Base 0.1.0
  lqr_vmap_list_current@Base 0.1.0
- lqr_vmap_list_destroy@Base 0.1.0
  lqr_vmap_list_foreach@Base 0.1.0
  lqr_vmap_list_next@Base 0.1.0
  lqr_vmap_list_start@Base 0.1.0
  lqr_vmap_load@Base 0.1.0
  lqr_vmap_new@Base 0.1.0
- lqr_carver_propagate_vsmap@Base 0.1.1
- lqr_carver_propagate_vsmap_attached@Base 0.1.1
  lqr_carver_rigmask_add@Base 0.1.1
  lqr_carver_rigmask_add_area@Base 0.1.1
  lqr_carver_rigmask_add_rgb@Base 0.1.1
  lqr_carver_rigmask_add_rgb_area@Base 0.1.1
- lqr_carver_rigmask_init@Base 0.1.1
  lqr_carver_set_side_switch_frequency@Base 0.1.1
