@@ -26,6 +26,8 @@
 
 #define LQR_MAX_NAME_LENGTH (1024)
 
+#define EXPORT __attribute__((visibility("default")))
+
 #define TRY_N_N(assign) if ((assign) == NULL) { return NULL; }
 //#define TRY_N_F(assign) if ((assign) == NULL) { return FALSE; }
 //#define TRY_F_N(assign) if ((assign) == FALSE) { return NULL; }
