@@ -50,6 +50,7 @@ lqr_carver_rigmask_init (LqrCarver *r)
 }
 
 
+EXPORT
 LqrRetVal
 lqr_carver_rigmask_add_area(LqrCarver *r, gdouble *buffer, gint width, gint height, gint x_off, gint y_off)
 {
@@ -91,12 +92,14 @@ lqr_carver_rigmask_add_area(LqrCarver *r, gdouble *buffer, gint width, gint heig
 }
 
 
+EXPORT
 LqrRetVal
 lqr_carver_rigmask_add(LqrCarver *r, gdouble *buffer)
 {
   return lqr_carver_rigmask_add_area(r, buffer, r->w0, r->h0, 0, 0);
 }
 
+EXPORT
 LqrRetVal
 lqr_carver_rigmask_add_rgb_area(LqrCarver *r, guchar *rgb, gint channels, gint width, gint height, gint x_off, gint y_off)
 {
@@ -165,6 +168,7 @@ lqr_carver_rigmask_add_rgb_area(LqrCarver *r, guchar *rgb, gint channels, gint w
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_carver_rigmask_add_rgb(LqrCarver *r, guchar *rgb, gint channels)
 {
