@@ -27,6 +27,7 @@
 #include <lqr/lqr_base.h>
 #include <lqr/lqr_progress.h>
 
+EXPORT
 LqrProgress *
 lqr_progress_new(void)
 {
@@ -84,6 +85,7 @@ lqr_progress_end(LqrProgress * p, const gchar * message)
     }
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_init(LqrProgress * p, LqrProgressFuncInit init_func)
 {
@@ -91,6 +93,7 @@ lqr_progress_set_init(LqrProgress * p, LqrProgressFuncInit init_func)
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_update(LqrProgress * p, LqrProgressFuncUpdate update_func)
 {
@@ -98,12 +101,15 @@ lqr_progress_set_update(LqrProgress * p, LqrProgressFuncUpdate update_func)
   return LQR_OK;
 }
 
-LqrRetVal lqr_progress_set_end(LqrProgress * p, LqrProgressFuncEnd end_func)
+EXPORT
+LqrRetVal
+lqr_progress_set_end(LqrProgress * p, LqrProgressFuncEnd end_func)
 {
   p->end = end_func;
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_update_step (LqrProgress *p, gfloat update_step)
 {
@@ -111,6 +117,7 @@ lqr_progress_set_update_step (LqrProgress *p, gfloat update_step)
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_init_width_message(LqrProgress *p, const gchar * message)
 {
@@ -119,6 +126,7 @@ lqr_progress_set_init_width_message(LqrProgress *p, const gchar * message)
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_init_height_message(LqrProgress *p, const gchar * message)
 {
@@ -127,6 +135,7 @@ lqr_progress_set_init_height_message(LqrProgress *p, const gchar * message)
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_end_width_message(LqrProgress *p, const gchar * message)
 {
@@ -135,6 +144,7 @@ lqr_progress_set_end_width_message(LqrProgress *p, const gchar * message)
   return LQR_OK;
 }
 
+EXPORT
 LqrRetVal
 lqr_progress_set_end_height_message(LqrProgress *p, const gchar * message)
 {
