@@ -31,6 +31,7 @@
 
 /**** SEAMS BUFFER FUNCTIONS ****/
 
+EXPORT
 LqrVMap*
 lqr_vmap_new (gint * buffer, gint width, gint height, gint depth, gint orientation)
 {
@@ -45,6 +46,7 @@ lqr_vmap_new (gint * buffer, gint width, gint height, gint depth, gint orientati
   return vmap;
 }
 
+EXPORT
 void
 lqr_vmap_destroy (LqrVMap * vmap)
 {
@@ -52,33 +54,43 @@ lqr_vmap_destroy (LqrVMap * vmap)
   g_free (vmap);
 }
 
+EXPORT
 gint *
 lqr_vmap_get_data (LqrVMap *vmap)
 {
   return vmap->buffer;
 }
 
-gint lqr_vmap_get_width (LqrVMap *vmap)
+EXPORT
+gint
+lqr_vmap_get_width (LqrVMap *vmap)
 {
   return vmap->width;
 }
 
-gint lqr_vmap_get_height (LqrVMap *vmap)
+EXPORT
+gint
+lqr_vmap_get_height (LqrVMap *vmap)
 {
   return vmap->height;
 }
 
-gint lqr_vmap_get_depth (LqrVMap *vmap)
+EXPORT
+gint
+lqr_vmap_get_depth (LqrVMap *vmap)
 {
   return vmap->depth;
 }
 
-gint lqr_vmap_get_orientation (LqrVMap *vmap)
+EXPORT
+gint
+lqr_vmap_get_orientation (LqrVMap *vmap)
 {
   return vmap->orientation;
 }
 
 /* dump the visibility level of the image */
+EXPORT
 LqrVMap*
 lqr_vmap_dump (LqrCarver * r)
 {
@@ -137,6 +149,7 @@ lqr_vmap_dump (LqrCarver * r)
 
 
 /* dump the visibility level of the image */
+EXPORT
 LqrRetVal
 lqr_vmap_internal_dump (LqrCarver * r)
 {
@@ -195,6 +208,7 @@ lqr_vmap_internal_dump (LqrCarver * r)
 }
 
 
+EXPORT
 LqrRetVal
 lqr_vmap_load (LqrCarver *r, LqrVMap *vmap)
 {
