@@ -69,12 +69,14 @@ lqr_vmap_list_destroy(LqrVMapList * list)
     }
 }
 
+EXPORT
 LqrVMapList *
 lqr_vmap_list_start (LqrCarver *r)
 {
   return r->flushed_vs;
 }
 
+EXPORT
 LqrVMapList *
 lqr_vmap_list_next (LqrVMapList * list)
 {
@@ -82,6 +84,7 @@ lqr_vmap_list_next (LqrVMapList * list)
   return list->next;
 }
 
+EXPORT
 LqrVMap *
 lqr_vmap_list_current (LqrVMapList * list)
 {
@@ -89,6 +92,7 @@ lqr_vmap_list_current (LqrVMapList * list)
   return list->current;
 }
 
+EXPORT
 LqrRetVal
 lqr_vmap_list_foreach (LqrVMapList * list, LqrVMapFunc func, gpointer data)
 {
